--- a/FastFoodApp/restaurantwidget.ui
+++ b/FastFoodApp/restaurantwidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>639</width>
+    <width>672</width>
     <height>479</height>
    </rect>
   </property>
@@ -84,14 +84,27 @@
      </item>
     </layout>
    </item>
-   <item row="0" column="2" rowspan="2">
-    <widget class="QWidget" name="RestaurantViewWidget" native="true">
+   <item row="0" column="2">
+    <widget class="QScrollArea" name="scrollArea_restaurants">
      <property name="minimumSize">
       <size>
        <width>550</width>
        <height>0</height>
       </size>
      </property>
+     <property name="widgetResizable">
+      <bool>true</bool>
+     </property>
+     <widget class="QWidget" name="scrollArea">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>548</width>
+        <height>463</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
    </item>
   </layout>
