--- a/menuwidget.ui
+++ b/menuwidget.ui
@@ -26,7 +26,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QListView" name="listView"/>
+        <widget class="QListWidget" name="listWidget"/>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout">
@@ -108,7 +108,7 @@
         <x>0</x>
         <y>0</y>
         <width>548</width>
-        <height>480</height>
+        <height>478</height>
        </rect>
       </property>
      </widget>
