Pictures added to log in and main manu

--- a/resource.qrc
+++ b/resource.qrc
@@ -1,11 +1,17 @@
-<RCC version="1.0">
-    <qresource prefix="data">
+<RCC>
+    <qresource prefix="/data">
         <file alias="source_data1.txt">source_data1.txt</file>
         <file alias="source_data2.txt">source_data2.txt</file>
     </qresource>
-    <qresource prefix="images">
+    <qresource prefix="/images">
         <file alias="rest_menu_icon.png">rest_menu_icon.png</file>
         <file alias="food_icon.png">food_icon.png</file>
         <file alias="food_image.png">food_image.png</file>
+        <file>01.jpg</file>
+        <file>02.jpg</file>
+        <file>03.jpg</file>
+        <file>04.jpg</file>
+        <file>05.jpg</file>
     </qresource>
+    <qresource prefix="/"/>
 </RCC>
