--- a/login.ui
+++ b/login.ui
@@ -70,7 +70,14 @@
     </spacer>
    </item>
    <item row="0" column="1" rowspan="4">
-    <widget class="QGraphicsView" name="graphicsView"/>
+    <widget class="QGraphicsView" name="graphicsView">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
    </item>
    <item row="3" column="2">
     <spacer name="verticalSpacer">
