--- a/revenuewidget.ui
+++ b/revenuewidget.ui
@@ -15,9 +15,6 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
-<<<<<<< Updated upstream
-    <widget class="QTableWidget" name="tableWidget"/>
-=======
     <widget class="QTableWidget" name="tableWidget">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -70,6 +67,9 @@
      <property name="columnCount">
       <number>0</number>
      </property>
+     <attribute name="horizontalHeaderVisible">
+      <bool>true</bool>
+     </attribute>
      <attribute name="horizontalHeaderDefaultSectionSize">
       <number>300</number>
      </attribute>
@@ -86,7 +86,6 @@
       <bool>true</bool>
      </attribute>
     </widget>
->>>>>>> Stashed changes
    </item>
    <item row="1" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -110,8 +109,6 @@
        </property>
       </spacer>
      </item>
-<<<<<<< Updated upstream
-=======
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
@@ -123,6 +120,9 @@
        </item>
        <item>
         <widget class="QLineEdit" name="totalRevenueLineEdit">
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
          <property name="readOnly">
           <bool>true</bool>
          </property>
@@ -130,7 +130,6 @@
        </item>
       </layout>
      </item>
->>>>>>> Stashed changes
     </layout>
    </item>
   </layout>
