--- a/menuwidget.ui
+++ b/menuwidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>751</width>
+    <width>830</width>
     <height>496</height>
    </rect>
   </property>
@@ -26,7 +26,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QListWidget" name="listWidget">
+        <widget class="QListWidget" name="listWidget_menuItems">
          <property name="frameShape">
           <enum>QFrame::NoFrame</enum>
          </property>
@@ -130,7 +130,7 @@
         <x>0</x>
         <y>0</y>
         <width>550</width>
-        <height>480</height>
+        <height>474</height>
        </rect>
       </property>
      </widget>
