--- a/restaurantwidget.ui
+++ b/restaurantwidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>775</width>
+    <width>828</width>
     <height>479</height>
    </rect>
   </property>
@@ -26,7 +26,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QListWidget" name="listWidget">
+        <widget class="QListWidget" name="listWidget_menuItems">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
            <horstretch>0</horstretch>
@@ -149,7 +149,7 @@
         <x>0</x>
         <y>0</y>
         <width>550</width>
-        <height>463</height>
+        <height>461</height>
        </rect>
       </property>
      </widget>
