--- a/menuwidget.ui
+++ b/menuwidget.ui
@@ -26,7 +26,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QListWidget" name="listWidget_menuItems">
+        <widget class="QTableWidget" name="tableWidget_orderItems">
          <property name="frameShape">
           <enum>QFrame::NoFrame</enum>
          </property>
@@ -78,13 +78,6 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="editButton">
-         <property name="text">
-          <string>Edit Order</string>
-         </property>
-        </widget>
-       </item>
-       <item>
         <widget class="QPushButton" name="cancelButton">
          <property name="text">
           <string>Cancel Order</string>
@@ -130,7 +123,7 @@
         <x>0</x>
         <y>0</y>
         <width>550</width>
-        <height>474</height>
+        <height>482</height>
        </rect>
       </property>
      </widget>
