--- a/restaurantwidget.ui
+++ b/restaurantwidget.ui
@@ -26,7 +26,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QListWidget" name="listWidget_menuItems">
+        <widget class="QTableWidget" name="tableWidget_tripRestaurants">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
            <horstretch>0</horstretch>
@@ -54,9 +54,15 @@
          <property name="defaultDropAction">
           <enum>Qt::IgnoreAction</enum>
          </property>
-         <property name="uniformItemSizes">
+         <attribute name="horizontalHeaderHighlightSections">
+          <bool>false</bool>
+         </attribute>
+         <attribute name="horizontalHeaderStretchLastSection">
           <bool>true</bool>
-         </property>
+         </attribute>
+         <attribute name="verticalHeaderVisible">
+          <bool>false</bool>
+         </attribute>
         </widget>
        </item>
       </layout>
@@ -149,7 +155,7 @@
         <x>0</x>
         <y>0</y>
         <width>550</width>
-        <height>461</height>
+        <height>465</height>
        </rect>
       </property>
      </widget>
