--- a/menuwidget.ui
+++ b/menuwidget.ui
@@ -27,9 +27,32 @@
        </item>
        <item>
         <widget class="QTableWidget" name="tableWidget_menuItems">
-         <attribute name="horizontalHeaderStretchLastSection">
-          <bool>true</bool>
+         <property name="rowCount">
+          <number>8</number>
+         </property>
+         <property name="columnCount">
+          <number>3</number>
+         </property>
+         <attribute name="horizontalHeaderDefaultSectionSize">
+          <number>120</number>
          </attribute>
+         <attribute name="horizontalHeaderStretchLastSection">
+          <bool>false</bool>
+         </attribute>
+         <attribute name="verticalHeaderDefaultSectionSize">
+          <number>50</number>
+         </attribute>
+         <row/>
+         <row/>
+         <row/>
+         <row/>
+         <row/>
+         <row/>
+         <row/>
+         <row/>
+         <column/>
+         <column/>
+         <column/>
         </widget>
        </item>
        <item>
@@ -130,7 +153,7 @@
         <x>0</x>
         <y>0</y>
         <width>550</width>
-        <height>474</height>
+        <height>478</height>
        </rect>
       </property>
      </widget>
