--- a/mainmenuwidget.ui
+++ b/mainmenuwidget.ui
@@ -15,12 +15,30 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
-    <widget class="QGraphicsView" name="graphicsView"/>
+    <widget class="QGraphicsView" name="graphicsView">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>600</width>
+       <height>0</height>
+      </size>
+     </property>
+    </widget>
    </item>
    <item row="0" column="1">
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QLabel" name="welcomeLabel">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Welcome, Guest</string>
        </property>
@@ -50,13 +68,6 @@
       <widget class="QPushButton" name="revenueButton">
        <property name="text">
         <string>Revenue</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="orderHistoryButton">
-       <property name="text">
-        <string>Order History</string>
        </property>
       </widget>
      </item>
