--- a/restaurantwidget.ui
+++ b/restaurantwidget.ui
@@ -127,8 +127,14 @@
      </property>
      <property name="minimumSize">
       <size>
-       <width>550</width>
+       <width>600</width>
        <height>0</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>600</width>
+       <height>16777215</height>
       </size>
      </property>
      <property name="frameShape">
@@ -138,7 +144,7 @@
       <enum>QFrame::Plain</enum>
      </property>
      <property name="verticalScrollBarPolicy">
-      <enum>Qt::ScrollBarAlwaysOff</enum>
+      <enum>Qt::ScrollBarAsNeeded</enum>
      </property>
      <property name="horizontalScrollBarPolicy">
       <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -154,7 +160,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>550</width>
+        <width>600</width>
         <height>465</height>
        </rect>
       </property>
