Now can view the distance of other restaurants from each location
Restaurant Button takes a combobox input to make restaurant buttons now

--- a/restaurantwidget.ui
+++ b/restaurantwidget.ui
@@ -71,11 +71,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="initialLocationLineEdit">
-         <property name="readOnly">
-          <bool>true</bool>
-         </property>
-        </widget>
+        <widget class="QComboBox" name="comboBox_restaurants"/>
        </item>
       </layout>
      </item>
