--- a/resource.qrc
+++ b/resource.qrc
@@ -8,5 +8,6 @@
         <file alias="food_icon.png">food_icon.png</file>
         <file alias="food_image.png">food_image.png</file>
         <file alias="trashbin_icon.png">trashbin_icon.png</file>
+        <file alias="plus_icon.png">plus_icon.png</file>
     </qresource>
 </RCC>
