created admin widget

--- a/mainmenuwidget.ui
+++ b/mainmenuwidget.ui
@@ -58,6 +58,13 @@
       </spacer>
      </item>
      <item>
+      <widget class="QPushButton" name="adminButton">
+       <property name="text">
+        <string>Admin</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="restaurantsButton">
        <property name="text">
         <string>Restaurants</string>
