start admin page

--- a/menuwidget.ui
+++ b/menuwidget.ui
@@ -83,6 +83,13 @@
         </spacer>
        </item>
        <item>
+        <widget class="QPushButton" name="editButton">
+         <property name="text">
+          <string>Edit Menu</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="confirmButton">
          <property name="text">
           <string>Confirm Order</string>
