implementing detailed revenue page

--- a/adminwidget.ui
+++ b/adminwidget.ui
@@ -76,11 +76,14 @@
      <property name="tabKeyNavigation">
       <bool>false</bool>
      </property>
+     <property name="showDropIndicator" stdset="0">
+      <bool>false</bool>
+     </property>
      <property name="dragDropOverwriteMode">
       <bool>false</bool>
      </property>
      <property name="selectionMode">
-      <enum>QAbstractItemView::ContiguousSelection</enum>
+      <enum>QAbstractItemView::SingleSelection</enum>
      </property>
      <property name="gridStyle">
       <enum>Qt::NoPen</enum>
