--- a/menuwidget.ui
+++ b/menuwidget.ui
@@ -55,6 +55,9 @@
          </item>
          <item>
           <widget class="QLineEdit" name="totalLineEdit">
+           <property name="alignment">
+            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+           </property>
            <property name="readOnly">
             <bool>true</bool>
            </property>
