--- a/loginwidget.ui
+++ b/loginwidget.ui
@@ -72,7 +72,7 @@
    <item row="0" column="1" rowspan="4">
     <widget class="QGraphicsView" name="graphicsView">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+      <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
